--- a/client/src/Components/Others/Others.css
+++ b/client/src/Components/Others/Others.css
@@ -8,7 +8,7 @@ h3 {
 .thoughts-section {
   padding: 10px;
   height: 400px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .fancy-scrollbar::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
