fixed bgrnd img

--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -1,7 +1,7 @@
 .App {
   align-items: center;
   text-align: center;
-  background-image: url('https://previews.dropbox.com/p/thumb/AAquv7gwKTkB4QmMG9fu0sG00dX_cX8yVj8v3NqA9M5S99i5pIXVMSBayc_-iBFfBTmqs2WOhi2HYTznLsGkhVEQCXYpyS5yFXWgV1k5PwHys8DIP96IDmjk0Qae4tb81InsqAr-ZdGLGLWVGshEbu2Kc8QUcYMnjgdmYUxcXlk66qlINcJwW4ADox9EfSnvEnK5u6FWf7SUO8_HSWt_ToXu_YnrDhCaIyAdq2G4xUaCW3es74uWY9echKbbPMf4rDp-aS0P_UOLKaR6kZD4_0qQrFYNhHOxcNP2FFabFfiTTe17PAEymtCRaWFqE5A6tz-SWdj40ZWRqf6-c378L5xm/p.jpeg?size=800x600&size_mode=3');
+  background-image: url('https://www.dropbox.com/s/6eqs0x4udac2gm2/oc-gonzalez-UIAyfvo9Bbw-unsplash.jpg?raw=1');
   background-size: cover;
   background-repeat: no-repeat;
 }
