--- a/client/src/Components/WordToday/WordToday.css
+++ b/client/src/Components/WordToday/WordToday.css
@@ -1,6 +1,6 @@
 
 p {
-  
+
 }
 h4 {
   font-family: 'Quicksand', sans-serif;
@@ -17,7 +17,7 @@ h4 {
   background-size: cover;
 }
 .user-inputs {
-  width: 400px;
+  width: 60%;
   text-align: center;
   position: grid;
   margin-left: auto;
@@ -32,20 +32,6 @@ textarea {
   outline: none;
   font-family: 'Quicksand', sans-serif
 }
-/* .fancy-scrollbar::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-.fancy-scrollbar::-webkit-scrollbar {
-  width: 20px;
-}
-.fancy-scrollbar::-webkit-scrollbar {
-  width: 10px;
-}
-.fancy-scrollbar::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 100, 0, 0.5);
-  border-radius: 10px;
-} */
 
 input {
   outline: none;
@@ -54,6 +40,9 @@ input {
 #second-row {
   height: 40px;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+
 }
 #thought-input {
   padding: 15px;
@@ -65,25 +54,28 @@ input {
   font-size: 12pt;
 }
 #user-email-field {
+
+  grid-template-columns: 1fr 1fr;
   height: 90%;
   padding-left: 15px;
   border-width: .5pt;
   border-bottom: none;
   border-radius: 0 0 0 25px;
   margin-bottom: 5px;
-  width: 75%;
+  width: 71%;
   float: left;
   background-color: #ffffe5;
   font-size: 12pt;
 }
 #btn-submit {
-  width: 20%;
+  grid-template-columns: 1fr 1fr;
+  width: 25%;
   height: 100%;
   border: solid 1px rgba(204, 153, 0 ,0.8);
   cursor: pointer;
   float: right;
   font-family: 'Quicksand', sans-serif;
-  font-size: 14pt;
+  font-size: 1rem;
   background-color: rgba(255, 255, 229, 0.9);
   transition-duration: .4s;
   outline: none;
