made user inputs more responsive

--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -1,8 +1,11 @@
 .App {
+  overflow-x: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
   align-items: center;
   text-align: center;
   background-image: url('https://www.dropbox.com/s/6eqs0x4udac2gm2/oc-gonzalez-UIAyfvo9Bbw-unsplash.jpg?raw=1');
-  background-size: cover;  
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
