--- a/client/src/Components/ConfirmAlert/ConfirmAlert.css
+++ b/client/src/Components/ConfirmAlert/ConfirmAlert.css
@@ -8,8 +8,8 @@
 
 .location-confirmAlert {
   padding-bottom: 5px;
-  position: relative;
-  border: solid;
+  /* position: relative; */
+  border: solid .6px;
   text-align: center;
   background-color: lightyellow;
   justify-content: space-between;
@@ -17,17 +17,25 @@
 .location-confirmAlert button {
   margin-top: 50px;
   padding: 5px;
-  width: 25%;  
+  width: 25%;
   border: solid 1px rgba(204, 153, 0 ,0.8);
   cursor: pointer;
   font-family: 'Quicksand', sans-serif;
   font-size: 1rem;
-  background-color: rgba(255, 200 229, 0.9);
+  background-color: rgba(255, 100, 0, 0.5);
   transition-duration: .4s;
   outline: none;
 }
+#btn-location-no {
+  left: 0%;
+  position: relative;
+}
+#btn-location-yes {
+  left: 0%;
+  position: relative;
+}
 .location-confirmAlert button:hover {
-	color: rgba(255, 255, 255, 0.9);
+	color: rgba(0, 0, 0, 0.9);
   border-color: rgba(255,0,0,0.5);
   background-color: rgba(0,0,0, .1);
   font-weight: bold;
