--- a/client/src/Components/WordToday/WordToday.css
+++ b/client/src/Components/WordToday/WordToday.css
@@ -11,7 +11,7 @@ h4 {
     position: fixed;
     /* z-index: 10; */
 }
-.wordToday {
+.selectedWord {
   color: #00ccff;
   font-style: oblique;
 }
@@ -60,7 +60,6 @@ input {
   font-size: 12pt;
 }
 #user-email-field {
-
   grid-template-columns: 1fr 1fr;
   height: 90%;
   padding-left: 15px;
@@ -86,7 +85,7 @@ input {
   transition-duration: .4s;
   outline: none;
 }
-#btn-submit:hover{
+#btn-submit:hover {
 	color: rgba(255, 255, 255, 0.9);
   border-color: rgba(255,0,0,0.5);
   background-color: rgba(0,0,0, .1);
@@ -107,4 +106,36 @@ input {
 #btn-submit:disabled {
   background-color: rgba(0,0,0,0.1);
   color: rgba(200,255,200, .4);
+}
+#btn-nextWord {
+  grid-template-columns: 1fr 1fr;
+  width: 150px;
+  /* height: 100%; */
+  border: solid 1px rgba(204, 153, 0 ,0.8);
+  /* border-radius: 18px; */
+  border-radius: 5px 30px 5px 5px;
+  cursor: pointer;
+  /* float: right; */
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1rem;
+  background-color: rgba(255, 255, 229, 0.3);
+  transition-duration: .4s;
+  outline: none;
+}
+#btn-nextWord:active{
+	border-color: rgba(255,0,255,0.9);
+	background-color: rgba(200,255,200,0.9);
+	color: #002E40;
+	box-shadow: 2px;
+	-webkit-transform: translateX(5px);
+	-moz-transform: translateX(5px);
+	-o-transform: translateX(5px);
+	-ms-transform: translateX(28px);
+	transform: translateX(28px);
+}
+#btn-nextWord:hover {
+	color: rgba(255, 255, 255, 0.9);
+  border-color: rgba(255,0,0,0.5);
+  background-color: #00ccff;
+  font-weight: bold;
 }
