--- a/client/src/Components/ConfirmAlert/ConfirmAlert.css
+++ b/client/src/Components/ConfirmAlert/ConfirmAlert.css
@@ -7,33 +7,26 @@
 }
 
 .location-confirmAlert {
-  padding-bottom: 5px;
-  /* position: relative; */
+  padding-bottom: 10px;
   border: solid .6px;
   text-align: center;
   background-color: lightyellow;
-  justify-content: space-between;
 }
 .location-confirmAlert button {
   margin-top: 50px;
   padding: 5px;
-  width: 25%;
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 20%;
   border: solid 1px rgba(204, 153, 0 ,0.8);
   cursor: pointer;
   font-family: 'Quicksand', sans-serif;
   font-size: 1rem;
-  background-color: rgba(255, 100, 0, 0.5);
+  background-color: rgba(0, 204, 255, 0.3);
   transition-duration: .4s;
   outline: none;
 }
-#btn-location-no {
-  left: 0%;
-  position: relative;
-}
-#btn-location-yes {
-  left: 0%;
-  position: relative;
-}
+
 .location-confirmAlert button:hover {
 	color: rgba(0, 0, 0, 0.9);
   border-color: rgba(255,0,0,0.5);
