--- a/client/src/Components/WordToday/WordToday.css
+++ b/client/src/Components/WordToday/WordToday.css
@@ -109,20 +109,20 @@ input {
 }
 #btn-nextWord {
   grid-template-columns: 1fr 1fr;
-  width: 150px;
-  /* height: 100%; */
-  border: solid 1px rgba(204, 153, 0 ,0.8);
-  /* border-radius: 18px; */
-  border-radius: 5px 30px 5px 5px;
+  width: 110px;
+  padding: 5px;
+  font-weight: bold;
+  color: rgba(100, 50, 0 ,0.8);
+  border: solid 7px rgba(250, 113, 0 ,0.9) 10px;
+  border-radius: 0px 20px 0px 20px;
   cursor: pointer;
-  /* float: right; */
   font-family: 'Quicksand', sans-serif;
   font-size: 1rem;
-  background-color: rgba(255, 255, 229, 0.3);
-  transition-duration: .4s;
+  background-color: rgba(255, 255, 200, 0.7);
+  transition-duration: .3s;
   outline: none;
 }
-#btn-nextWord:active{
+#btn-nextWord:active {
 	border-color: rgba(255,0,255,0.9);
 	background-color: rgba(200,255,200,0.9);
 	color: #002E40;
@@ -136,6 +136,6 @@ input {
 #btn-nextWord:hover {
 	color: rgba(255, 255, 255, 0.9);
   border-color: rgba(255,0,0,0.5);
-  background-color: #00ccff;
+  background-color: rgba(0, 204, 255, .2);
   font-weight: bold;
 }
